.provarCaches/00D410000011HE0EAM/objects/rstk__poasnreq__c.object
<CustomObject>
    <description>poasnreq__c; BOC</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__poasnreq_poasn__r.rstk__externalid__c &amp;&quot;_&quot;&amp; rstk__poasnreq_supreq__r.rstk__supreq_ordno__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__poasnreq_poasn__c &amp;&quot;_&quot;&amp; rstk__poasnreq_supreq__r.rstk__supreq_icreq__r.rstk__icreq_ordno__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poasnreq_dgndocid__c</fullName>
        <label>Attached DGN Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poasnreq_dgnrequired__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>DGN Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poasnreq_expdate__c</fullName>
        <inlineHelpText>Test</inlineHelpText>
        <label>Lot Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poasnreq_haveci__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Commercial Invoice Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poasnreq_havedgn__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>DGN Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poasnreq_havepack__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Packing List Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poasnreq_haveswb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SWB Attached by TMM Freight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poasnreq_lotno__c</fullName>
        <inlineHelpText>Test</inlineHelpText>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poasnreq_lotnos__c</fullName>
        <inlineHelpText>Lot Numbers associated with this ASN Requisition</inlineHelpText>
        <label>Lot Numbers</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__poasnreq_poasn__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ASN</label>
        <referenceTo>rstk__poasn__c</referenceTo>
        <relationshipLabel>ASN Requisitions</relationshipLabel>
        <relationshipName>poasnreqs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__poasnreq_qtyship__c</fullName>
        <inlineHelpText>Test</inlineHelpText>
        <label>Shipment Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poasnreq_received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requisition Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poasnreq_supreq__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Test</inlineHelpText>
        <label>Requisition</label>
        <referenceTo>rstk__supreq__c</referenceTo>
        <relationshipLabel>ASN Requisitions</relationshipLabel>
        <relationshipName>poasnreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>ASN Requisition</label>
    <listViews>
        <fullName>rstk__Details</fullName>
        <columns>NAME</columns>
        <columns>rstk__poasnreq_poasn__c</columns>
        <columns>rstk__poasnreq_supreq__c</columns>
        <columns>rstk__poasnreq_received__c</columns>
        <columns>rstk__poasnreq_havedgn__c</columns>
        <columns>rstk__poasnreq_dgnrequired__c</columns>
        <columns>rstk__poasnreq_havepack__c</columns>
        <columns>rstk__poasnreq_haveci__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>rstk__poasnreq_dgndocid__c</columns>
        <filterScope>Everything</filterScope>
        <label>Details</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_ASN_Requisitions</fullName>
        <columns>NAME</columns>
        <columns>rstk__poasnreq_poasn__c</columns>
        <columns>rstk__poasnreq_supreq__c</columns>
        <columns>rstk__poasnreq_qtyship__c</columns>
        <columns>rstk__poasnreq_lotno__c</columns>
        <columns>rstk__poasnreq_expdate__c</columns>
        <columns>rstk__poasnreq_received__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>ASN Requisitions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ASN Requisitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Lot_Expiration_Date</fullName>
        <active>true</active>
        <description>Lot Expiration Date is Required</description>
        <errorConditionFormula>ISBLANK(rstk__poasnreq_expdate__c ) &amp;&amp; ISPICKVAL(rstk__poasnreq_supreq__r.rstk__supreq_icitem__r.rstk__icitem_item__r.rstk__peitem_tracklot_pl__c , &apos;Yes&apos;)</errorConditionFormula>
        <errorMessage>Lot Expiration Date is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Lot_Number</fullName>
        <active>true</active>
        <description>Lot Numbers are Required</description>
        <errorConditionFormula>ISBLANK(rstk__poasnreq_lotnos__c) &amp;&amp;   ISPICKVAL(rstk__poasnreq_supreq__r.rstk__supreq_icitem__r.rstk__icitem_item__r.rstk__peitem_tracklot_pl__c , &apos;Yes&apos;)</errorConditionFormula>
        <errorMessage>Lot Numbers are Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Requisition</fullName>
        <active>true</active>
        <description>Requisition is Required. Also Requisition Supplier and Division must match the Advance Shipment Notification Supplier and Division.</description>
        <errorConditionFormula>ISBLANK(rstk__poasnreq_supreq__c) ||  (rstk__poasnreq_poasn__r.rstk__poasn_povend__c !=  rstk__poasnreq_supreq__r.rstk__supreq_povend__c) ||  (rstk__poasnreq_poasn__r.rstk__poasn_div__c !=  rstk__poasnreq_supreq__r.rstk__supreq_div__c)</errorConditionFormula>
        <errorMessage>Requisition is Required also Requisition Supplier and Division should be equal to  Advance Shipment Notification Supplier and Division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Shipment_Quantity</fullName>
        <active>true</active>
        <description>Shipment Quantity is Required and cannot be less than Requisition Quantity.</description>
        <errorConditionFormula>ISBLANK(rstk__poasnreq_qtyship__c) || rstk__poasnreq_qtyship__c &lt; rstk__poasnreq_supreq__r.rstk__supreq_qtyreq__c</errorConditionFormula>
        <errorMessage>Shipment Quantity is Required and cannot be less than Requisition Quantity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__supreq_validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp;  !rstk__poasnreq_supreq__r.rstk__supreq_accepted__c</errorConditionFormula>
        <errorMessage>Specified Requisition has not been accepted.</errorMessage>
    </validationRules>
</CustomObject>